--- a/index.html
+++ b/index.html
@@ -2,187 +2,94 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jorge Daniel Gonzalez - Sr Android Developer</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-      background: #f5f7fa;
-      color: #333;
-      line-height: 1.6;
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jorge Daniel Gonzalez - CV</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    // Toggle Dark Mode
+    function toggleDarkMode() {
+      document.documentElement.classList.toggle('dark');
     }
-    header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    h1 {
-      margin-bottom: 5px;
-      font-size: 2.2em;
-    }
-    h2 {
-      border-bottom: 2px solid #0073e6;
-      padding-bottom: 5px;
-      margin-top: 40px;
-    }
-    a {
-      color: #0073e6;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    .contact-info p {
-      margin: 5px 0;
-    }
-    .section-content p,
-    .section-content ul {
-      margin: 10px 0 20px 0;
-    }
-    .job-title {
-      font-weight: bold;
-    }
-    .job-date {
-      font-style: italic;
-      color: #666;
-    }
-  </style>
+  </script>
 </head>
-<body>
-  <header>
-    <h1>Jorge Daniel Gonzalez</h1>
-    <p>Sr Android Developer</p>
-    <div class="contact-info">
-      <p>Ramos Mejía, Buenos Aires, Argentina</p>
-      <p>+54 9 11 3020 8941 | <a href="mailto:jorgedaniel29.jg@gmail.com">jorgedaniel29.jg@gmail.com</a></p>
-      <p><a href="#">LinkedIn</a> | <a href="#">GitHub</a></p>
+<body class="bg-white text-gray-800 dark:bg-gray-900 dark:text-gray-100 font-sans">
+  <!-- Header -->
+  <header class="sticky top-0 bg-white dark:bg-gray-900 z-50 shadow p-4 flex justify-between items-center">
+    <h1 class="text-xl font-bold">Jorge Daniel Gonzalez</h1>
+    <div class="flex gap-4 items-center">
+      <nav class="hidden sm:flex gap-4">
+        <a href="#experiencia" class="hover:underline">Experiencia</a>
+        <a href="#educacion" class="hover:underline">Educación</a>
+        <a href="#skills" class="hover:underline">Skills</a>
+        <a href="#contacto" class="hover:underline">Contacto</a>
+      </nav>
+      <button onclick="toggleDarkMode()" class="text-sm border px-2 py-1 rounded">Modo</button>
     </div>
   </header>
 
-  <section>
-    <h2>Resumen Profesional</h2>
-    <div class="section-content">
-      <p>Profesional del desarrollo mobile con más de 8 años de experiencia, especializado en Android. Actualmente Sr Android Developer en Mercado Libre, con dominio en Clean Architecture, MVVM, Kotlin, testing y CI/CD. Experiencia en trabajo colaborativo con equipos multidisciplinarios para entregar soluciones escalables, seguras y de alto impacto.</p>
+  <!-- Hero -->
+  <section class="text-center py-16 px-4">
+    <h2 class="text-4xl font-bold mb-2">Sr Android Developer</h2>
+    <p class="text-lg mb-4">8+ años de experiencia en desarrollo mobile, arquitectura limpia, Kotlin y CI/CD.</p>
+    <div class="flex justify-center gap-4 mb-4">
+      <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">Email</a>
+      <a href="#" target="_blank" class="underline">LinkedIn</a>
+      <a href="#" target="_blank" class="underline">GitHub</a>
+    </div>
+    <a href="CV_Jorge_Daniel_Gonzalez.pdf" download class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded">Descargar CV PDF</a>
+  </section>
+
+  <!-- Experiencia -->
+  <section id="experiencia" class="px-4 py-10 max-w-4xl mx-auto">
+    <h3 class="text-2xl font-bold mb-6 border-b pb-2">Experiencia Profesional</h3>
+    <div class="space-y-6">
+      <div>
+        <h4 class="text-xl font-semibold">Mercado Libre — Líder Técnico de Software</h4>
+        <span class="text-sm italic text-gray-500">Feb 2023 - Actualidad</span>
+        <ul class="list-disc pl-5 mt-2 text-sm">
+          <li>Liderazgo técnico en Mercado Pago</li>
+          <li>Mentoring, buenas prácticas, KPIs</li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="text-xl font-semibold">Mercado Libre — Sr Android Developer</h4>
+        <span class="text-sm italic text-gray-500">Feb 2019 - Ene 2023</span>
+        <ul class="list-disc pl-5 mt-2 text-sm">
+          <li>Checkout, enrolamiento, coroutines, testing</li>
+        </ul>
+      </div>
+      <!-- Agregar más experiencias si querés -->
     </div>
   </section>
 
-  <section>
-    <h2>Experiencia Profesional</h2>
-    <div class="section-content">
-      <h3>Mercado Libre</h3>
-      <p><span class="job-title">Líder Técnico de Software</span> <span class="job-date">Febrero 2023 – Actualidad</span></p>
-      <ul>
-        <li>Liderazgo técnico en el desarrollo de soluciones complejas para Mercado Pago.</li>
-        <li>Coordinación y mentoring de desarrolladores.</li>
-        <li>Definición y promoción de buenas prácticas en arquitectura y código.</li>
-        <li>Planificación técnica, integración entre equipos y seguimiento de KPIs.</li>
-      </ul>
+  <!-- Educacion -->
+  <section id="educacion" class="px-4 py-10 max-w-4xl mx-auto">
+    <h3 class="text-2xl font-bold mb-4 border-b pb-2">Educación</h3>
+    <p><strong>Ingeniería en Informática</strong> - UNLaM</p>
+    <p class="text-sm text-gray-500">Estudios avanzados en desarrollo y arquitectura de software</p>
+    <br />
+    <p><strong>Técnico Electrónico</strong> - E.E.T. N.º 8</p>
+  </section>
 
-      <p><span class="job-title">Sr Android Developer</span> <span class="job-date">Febrero 2019 – Enero 2023</span></p>
-      <ul>
-        <li>Desarrollo y mantenimiento de funcionalidades clave para Mercado Pago Checkout.</li>
-        <li>Implementación de librerías para enrolamiento y gestión de tarjetas, código de seguridad, payment links, entre otras.</li>
-        <li>Uso de Clean Architecture (MVVM), coroutines, Retrofit 2, Koin y Service Locator.</li>
-        <li>Pruebas unitarias e integración continua.</li>
-        <li>Herramientas: Bugsnag, Kibana, Alation.</li>
-        <li>Coordinación y mentoring dentro del equipo.</li>
-      </ul>
-    </div>
-
-    <div class="section-content">
-      <h3>IguanaFix</h3>
-      <p><span class="job-title">Android Developer</span> <span class="job-date">Marzo 2018 – Abril 2019</span></p>
-      <ul>
-        <li>Desarrollo y mantenimiento de app para clientes.</li>
-        <li>Tecnologías: Kotlin, RxJava, Retrofit, Firebase, Room, ViewModel, Glide, Butter Knife, GoogleMaps API.</li>
-        <li>Aplicación de MVVM y componentes de arquitectura Android.</li>
-      </ul>
-    </div>
-
-    <div class="section-content">
-      <h3>Fusap</h3>
-      <p><span class="job-title">Java Mobile Junior Programmer</span> <span class="job-date">Abril 2016 – Febrero 2018</span></p>
-      <ul>
-        <li>Desarrollo de aplicaciones móviles Android para clientes corporativos.</li>
-        <li>Uso de Firebase, GoogleMaps API, Volley, EventBus, Glide.</li>
-      </ul>
-    </div>
-
-    <div class="section-content">
-      <h3>Codere Bingo</h3>
-      <p><span class="job-title">Técnico Electrónico</span> <span class="job-date">Marzo 2015 – Marzo 2016</span></p>
-      <ul>
-        <li>Mantenimiento, limpieza y diagnóstico de máquinas electrónicas.</li>
-      </ul>
-    </div>
-
-    <div class="section-content">
-      <h3>OSED Entidad Educativa</h3>
-      <p><span class="job-title">Atención al Cliente y Administración</span> <span class="job-date">Diciembre 2011 – Enero 2014</span></p>
-      <ul>
-        <li>Atención al cliente, ventas, manejo administrativo, apertura y cierre del local.</li>
-      </ul>
-    </div>
-
-    <div class="section-content">
-      <h3>Freelancer</h3>
-      <p><span class="job-title">Armado y soldadura de placas electrónicas</span> <span class="job-date">2008 – 2010</span></p>
-      <ul>
-        <li>Ensamblado de placas electrónicas por pedido.</li>
-      </ul>
+  <!-- Skills -->
+  <section id="skills" class="px-4 py-10 max-w-4xl mx-auto">
+    <h3 class="text-2xl font-bold mb-4 border-b pb-2">Skills</h3>
+    <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 text-sm">
+      <span>Kotlin</span><span>Java</span><span>Git</span>
+      <span>CI/CD</span><span>MVVM</span><span>Firebase</span>
+      <span>Scrum</span><span>Room</span><span>Retrofit</span>
     </div>
   </section>
 
-  <section>
-    <h2>Educación</h2>
-    <div class="section-content">
-      <p><strong>Formación en Ingeniería en Informática</strong><br />
-      Universidad Nacional de La Matanza<br />
-      Estudios universitarios avanzados en desarrollo de software, arquitectura de sistemas y tecnologías informáticas.</p>
-
-      <p><strong>Técnico Electrónico</strong><br />
-      E.E.T. N.º 8, Morón, Buenos Aires<br />
-      2006 – 2010</p>
-    </div>
+  <!-- Contacto -->
+  <section id="contacto" class="px-4 py-10 max-w-4xl mx-auto text-center">
+    <h3 class="text-2xl font-bold mb-2">Contacto</h3>
+    <p>Podés escribirme a <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">jorgedaniel29.jg@gmail.com</a></p>
   </section>
 
-  <section>
-    <h2>Cursos y Certificaciones</h2>
-    <ul>
-      <li>Técnico en reparación y armado de PC – Instituto de Formación Laboral (2010)</li>
-      <li>Técnico en reparación de celulares – Instituto de Formación Laboral (2010)</li>
-      <li>Programa de orientación al mundo del trabajo (POI) – Ministerio de Trabajo + Municipalidad de Morón (2011)</li>
-      <li>Módulos: Informática, Salud laboral, Proyecto ocupacional, Derechos laborales</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Habilidades Técnicas</h2>
-    <ul>
-      <li>Lenguajes: Kotlin, Java, C</li>
-      <li>Herramientas: Git, Retrofit, Koin, Firebase, Room, Glide, Picasso, EventBus</li>
-      <li>Metodologías: Scrum, Clean Architecture, MVVM</li>
-      <li>Testing: Unit Testing, CI/CD</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Soft Skills</h2>
-    <p>Comunicación, trabajo en equipo, proactividad, orientación a resultados</p>
-  </section>
-
-  <section>
-    <h2>Idiomas</h2>
-    <ul>
-      <li>Español: Nativo</li>
-      <li>Inglés: Básico (en formación)</li>
-    </ul>
-  </section>
+  <!-- Footer -->
+  <footer class="bg-gray-100 dark:bg-gray-800 text-center py-4 text-sm">
+    <p>&copy; 2025 Jorge Daniel Gonzalez</p>
+  </footer>
 </body>
 </html>
