--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <title>Jorge Daniel Gonzalez - CV</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    // Toggle Dark Mode
     function toggleDarkMode() {
       document.documentElement.classList.toggle('dark');
     }
   </script>
 </head>
 <body class="bg-white text-gray-800 dark:bg-gray-900 dark:text-gray-100 font-sans">
-  <!-- Header -->
   <header class="sticky top-0 bg-white dark:bg-gray-900 z-50 shadow p-4 flex justify-between items-center">
     <h1 class="text-xl font-bold">Jorge Daniel Gonzalez</h1>
     <div class="flex gap-4 items-center">
@@ -27,10 +25,9 @@
     </div>
   </header>
 
-  <!-- Hero -->
   <section class="text-center py-16 px-4">
     <h2 class="text-4xl font-bold mb-2">Sr Android Developer</h2>
-    <p class="text-lg mb-4">8+ años de experiencia en desarrollo mobile, arquitectura limpia, Kotlin y CI/CD.</p>
+    <p class="text-lg mb-4">Más de 8 años de experiencia en desarrollo mobile, arquitectura limpia (Clean Architecture), MVVM, Kotlin, testing y CI/CD.</p>
     <div class="flex justify-center gap-4 mb-4">
       <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">Email</a>
       <a href="#" target="_blank" class="underline">LinkedIn</a>
@@ -39,55 +36,104 @@
     <a href="CV_Jorge_Daniel_Gonzalez.pdf" download class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded">Descargar CV PDF</a>
   </section>
 
-  <!-- Experiencia -->
   <section id="experiencia" class="px-4 py-10 max-w-4xl mx-auto">
     <h3 class="text-2xl font-bold mb-6 border-b pb-2">Experiencia Profesional</h3>
-    <div class="space-y-6">
+    <div class="space-y-8">
       <div>
         <h4 class="text-xl font-semibold">Mercado Libre — Líder Técnico de Software</h4>
-        <span class="text-sm italic text-gray-500">Feb 2023 - Actualidad</span>
+        <span class="text-sm italic text-gray-500">Febrero 2023 – Actualidad</span>
         <ul class="list-disc pl-5 mt-2 text-sm">
-          <li>Liderazgo técnico en Mercado Pago</li>
-          <li>Mentoring, buenas prácticas, KPIs</li>
+          <li>Liderazgo técnico en el desarrollo de soluciones complejas dentro del ecosistema de Mercado Pago.</li>
+          <li>Coordinación de equipo de desarrollo, mentoring de desarrolladores y definición de buenas prácticas de arquitectura y código.</li>
+          <li>Planificación técnica de funcionalidades de alto impacto, integración con otros equipos y seguimiento de KPIs de producto y performance.</li>
         </ul>
       </div>
       <div>
         <h4 class="text-xl font-semibold">Mercado Libre — Sr Android Developer</h4>
-        <span class="text-sm italic text-gray-500">Feb 2019 - Ene 2023</span>
+        <span class="text-sm italic text-gray-500">Febrero 2019 – Enero 2023</span>
         <ul class="list-disc pl-5 mt-2 text-sm">
-          <li>Checkout, enrolamiento, coroutines, testing</li>
+          <li>Desarrollo y mantenimiento de funcionalidades en Mercado Pago Checkout.</li>
+          <li>Implementación de librerías clave: enrolamiento de tarjetas, arte de tarjetas, código de seguridad, payment link, etc.</li>
+          <li>Arquitectura limpia: MVVM, uso de coroutines, Retrofit 2, Koin y Service Locator para inyección de dependencias.</li>
+          <li>Pruebas unitarias y procesos de integración continua.</li>
+          <li>Herramientas: Bugsnag (errores), Kibana (logs), Alation (métricas de negocio).</li>
         </ul>
       </div>
-      <!-- Agregar más experiencias si querés -->
+      <div>
+        <h4 class="text-xl font-semibold">IguanaFix — Android Developer</h4>
+        <span class="text-sm italic text-gray-500">Marzo 2018 – Abril 2019</span>
+        <ul class="list-disc pl-5 mt-2 text-sm">
+          <li>Mantenimiento y desarrollo de IguanaFix – App para clientes.</li>
+          <li>Stack: Kotlin, RxJava, Retrofit, Firebase, Room, ViewModel, Glide, Butter Knife, GoogleMaps API.</li>
+          <li>Aplicación de MVVM y componentes de arquitectura de Android.</li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="text-xl font-semibold">Fusap — Java Mobile Junior Programmer</h4>
+        <span class="text-sm italic text-gray-500">Abril 2016 – Febrero 2018</span>
+        <ul class="list-disc pl-5 mt-2 text-sm">
+          <li>Desarrollo de aplicaciones móviles Android para clientes corporativos.</li>
+          <li>Uso de herramientas: Firebase, GoogleMaps API, Volley, EventBus, Glide.</li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="text-xl font-semibold">Codere Bingo — Técnico Electrónico</h4>
+        <span class="text-sm italic text-gray-500">Marzo 2015 – Marzo 2016</span>
+        <ul class="list-disc pl-5 mt-2 text-sm">
+          <li>Mantenimiento, limpieza y diagnóstico de máquinas electrónicas.</li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="text-xl font-semibold">OSED Entidad Educativa — Atención al Cliente y Administración</h4>
+        <span class="text-sm italic text-gray-500">Diciembre 2011 – Enero 2014</span>
+        <ul class="list-disc pl-5 mt-2 text-sm">
+          <li>Atención al cliente, ventas, manejo administrativo, apertura/cierre del local.</li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="text-xl font-semibold">Freelancer — Armado y soldadura de placas electrónicas</h4>
+        <span class="text-sm italic text-gray-500">2008 – 2010</span>
+        <ul class="list-disc pl-5 mt-2 text-sm">
+          <li>Ensamblado de placas electrónicas por pedido del cliente.</li>
+        </ul>
+      </div>
     </div>
   </section>
 
-  <!-- Educacion -->
   <section id="educacion" class="px-4 py-10 max-w-4xl mx-auto">
-    <h3 class="text-2xl font-bold mb-4 border-b pb-2">Educación</h3>
-    <p><strong>Ingeniería en Informática</strong> - UNLaM</p>
-    <p class="text-sm text-gray-500">Estudios avanzados en desarrollo y arquitectura de software</p>
+    <h3 class="text-2xl font-bold mb-4 border-b pb-2">Educación y Certificaciones</h3>
+    <p><strong>Formación en Ingeniería en Informática</strong> – Universidad Nacional de La Matanza</p>
+    <p class="text-sm text-gray-500">Estudios avanzados en desarrollo de software, arquitectura de sistemas y tecnologías informáticas.</p>
     <br />
-    <p><strong>Técnico Electrónico</strong> - E.E.T. N.º 8</p>
+    <p><strong>Técnico Electrónico</strong> – E.E.T. N.º 8, Morón, Buenos Aires (2006 – 2010)</p>
+    <br />
+    <ul class="list-disc pl-5 text-sm">
+      <li>Técnico en reparación y armado de PC – Instituto de Formación Laboral (2010)</li>
+      <li>Técnico en reparación de celulares – Instituto de Formación Laboral (2010)</li>
+      <li>Programa de orientación al mundo del trabajo (POI) – Ministerio de Trabajo + Municipalidad de Morón (2011)</li>
+    </ul>
   </section>
 
-  <!-- Skills -->
   <section id="skills" class="px-4 py-10 max-w-4xl mx-auto">
-    <h3 class="text-2xl font-bold mb-4 border-b pb-2">Skills</h3>
+    <h3 class="text-2xl font-bold mb-4 border-b pb-2">Skills Técnicos y Blandos</h3>
     <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 text-sm">
-      <span>Kotlin</span><span>Java</span><span>Git</span>
-      <span>CI/CD</span><span>MVVM</span><span>Firebase</span>
-      <span>Scrum</span><span>Room</span><span>Retrofit</span>
+      <span>Kotlin</span><span>Java</span><span>C</span>
+      <span>Git</span><span>Retrofit</span><span>Koin</span>
+      <span>Firebase</span><span>Room</span><span>Glide</span>
+      <span>Picasso</span><span>EventBus</span><span>Scrum</span>
+      <span>Clean Architecture</span><span>MVVM</span><span>CI/CD</span>
+      <span>Unit Testing</span><span>Comunicación</span><span>Trabajo en equipo</span>
+      <span>Proactividad</span><span>Orientación a resultados</span>
     </div>
   </section>
 
-  <!-- Contacto -->
   <section id="contacto" class="px-4 py-10 max-w-4xl mx-auto text-center">
     <h3 class="text-2xl font-bold mb-2">Contacto</h3>
-    <p>Podés escribirme a <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">jorgedaniel29.jg@gmail.com</a></p>
+    <p>Email: <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">jorgedaniel29.jg@gmail.com</a></p>
+    <p>Teléfono: +54 9 11 3020 8941</p>
+    <p>Ubicación: Ramos Mejía, Buenos Aires, Argentina</p>
   </section>
 
-  <!-- Footer -->
   <footer class="bg-gray-100 dark:bg-gray-800 text-center py-4 text-sm">
     <p>&copy; 2025 Jorge Daniel Gonzalez</p>
   </footer>
