--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </header>
 
-  <section class="text-center py-16 px-4">
+  <section id="presentacion" class="text-center py-16 px-4">
     <h2 class="text-4xl font-bold mb-2">Líder Técnico de Software & Sr Android Developer</h2>
     <p class="text-lg mb-4">Más de 9 años de experiencia en desarrollo mobile, liderazgo técnico, arquitectura limpia (Clean Architecture), MVVM, Kotlin, testing y CI/CD.</p>
     <div class="flex justify-center gap-4 mb-4">
@@ -102,6 +102,84 @@
     </div>
   </section>
 
-  <!-- Las demás secciones (educación, skills, contacto) ya están completas -->
+  <section id="educacion" class="px-4 py-10 max-w-4xl mx-auto">
+  <h3 class="text-2xl font-bold mb-6 border-b pb-2">Educación</h3>
+  <ul class="list-disc pl-5 text-sm space-y-4">
+    <li>
+      <strong>Ingeniería en Informática (en curso)</strong><br />
+      Universidad Nacional de La Matanza, Buenos Aires<br />
+      2014 – Actualidad | 16 materias aprobadas de 46
+    </li>
+    <li>
+      <strong>Técnico Electrónico</strong><br />
+      E.E.T. Nº 8, Morón, Buenos Aires<br />
+      2006 – 2010
+    </li>
+  </ul>
+</section>
+
+<section id="skills" class="px-4 py-10 max-w-4xl mx-auto">
+  <h3 class="text-2xl font-bold mb-6 border-b pb-2">Skills Técnicos</h3>
+  <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 text-sm">
+    <div>
+      <h4 class="font-semibold">Lenguajes</h4>
+      <ul class="list-disc list-inside">
+        <li>Kotlin</li>
+        <li>Java</li>
+        <li>C</li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="font-semibold">Herramientas</h4>
+      <ul class="list-disc list-inside">
+        <li>Git</li>
+        <li>Retrofit</li>
+        <li>Koin</li>
+        <li>Firebase</li>
+        <li>Room</li>
+        <li>Glide</li>
+        <li>Picasso</li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="font-semibold">Metodologías</h4>
+      <ul class="list-disc list-inside">
+        <li>Scrum</li>
+        <li>Clean Architecture</li>
+        <li>MVVM</li>
+        <li>CI/CD</li>
+        <li>Unit Testing</li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="font-semibold">Soft Skills</h4>
+      <ul class="list-disc list-inside">
+        <li>Comunicación efectiva</li>
+        <li>Trabajo en equipo</li>
+        <li>Proactividad</li>
+        <li>Orientación a resultados</li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="font-semibold">Idiomas</h4>
+      <ul class="list-disc list-inside">
+        <li>Español: Nativo</li>
+        <li>Inglés: Básico (en formación)</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<section id="contacto" class="px-4 py-10 max-w-4xl mx-auto">
+  <h3 class="text-2xl font-bold mb-6 border-b pb-2">Contacto</h3>
+  <ul class="text-sm">
+    <li><strong>Nombre:</strong> Jorge Daniel Gonzalez</li>
+    <li><strong>Email:</strong> <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">jorgedaniel29.jg@gmail.com</a></li>
+    <li><strong>Teléfono:</strong> +54 9 11 3020 8941</li>
+    <li><strong>Dirección:</strong> Dr. Gabriel Ardoino 490, Ramos Mejía, Buenos Aires</li>
+    <li><strong>LinkedIn:</strong> <a href="#" class="underline">(agregar enlace)</a></li>
+    <li><strong>GitHub:</strong> <a href="#" class="underline">(agregar enlace)</a></li>
+  </ul>
+</section>
 </body>
 </html>
