--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jorge Daniel Gonzalez - CV</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    function toggleDarkMode() {
-      document.documentElement.classList.toggle('dark');
-    }
-  </script>
 </head>
 <body class="bg-white text-gray-800 dark:bg-gray-900 dark:text-gray-100 font-sans">
   <header class="sticky top-0 bg-white dark:bg-gray-900 z-50 shadow p-4 flex justify-between items-center">
@@ -22,7 +17,6 @@
         <a href="#skills" class="hover:underline">Skills</a>
         <a href="#contacto" class="hover:underline">Contacto</a>
       </nav>
-      <button onclick="toggleDarkMode()" class="text-sm border px-2 py-1 rounded">Modo</button>
     </div>
   </header>
 
@@ -31,8 +25,8 @@
     <p class="text-lg mb-4">Más de 9 años de experiencia en desarrollo mobile, liderazgo técnico, arquitectura limpia (Clean Architecture), MVVM, Kotlin, testing y CI/CD.</p>
     <div class="flex justify-center gap-4 mb-4">
       <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">Email</a>
-      <a href="#" target="_blank" class="underline">LinkedIn</a>
-      <a href="#" target="_blank" class="underline">GitHub</a>
+      <a href="https://www.linkedin.com/in/jorge-daniel-gonzalez-8783a2112/" target="_blank" class="underline">LinkedIn</a>
+      <a href="https://github.com/JorgeDaniel29" target="_blank" class="underline">GitHub</a>
     </div>
     <a href="CV_Jorge_Daniel_Gonzalez.pdf" download class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded">Descargar CV PDF</a>
   </section>
