--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <section id="presentacion" class="text-center py-16 px-4">
-    <h2 class="text-4xl font-bold mb-2">Android Developer</h2>
+    <h2 class="text-4xl font-bold mb-2">Software Developer</h2>
     <p class="text-lg mb-4">Más de 9 años de experiencia en desarrollo mobile, liderazgo técnico, arquitectura limpia (Clean Architecture), MVVM, Kotlin, testing y CI/CD.</p>
     <div class="flex justify-center gap-4 mb-4">
       <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">Email</a>
