--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <li><strong>Email:</strong> <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">jorgedaniel29.jg@gmail.com</a></li>
           <li><strong>Teléfono:</strong> +54 9 11 3020 8941</li>
           <li><strong>Dirección:</strong> Dr. Gabriel Ardoino 490, Ramos Mejía, Buenos Aires</li>
-          <li><strong>LinkedIn:</strong> <a href="#" class="underline">https://www.linkedin.com/in/jorge-daniel-gonzalez-8783a2112/</a></li>
-          <li><strong>GitHub:</strong> <a href="#" class="underline">https://github.com/JorgeDaniel29</a></li>
+          <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/jorge-daniel-gonzalez-8783a2112/" class="underline" target="_blank">https://www.linkedin.com/in/jorge-daniel-gonzalez-8783a2112/</a></li>
+          <li><strong>GitHub:</strong> <a href="https://github.com/JorgeDaniel29" class="underline" target="_blank">https://github.com/JorgeDaniel29</a></li>
         </ul>
       </div>
     </div>
