--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
         <a href="#experiencia" class="hover:underline">Experiencia</a>
         <a href="#educacion" class="hover:underline">Educación</a>
         <a href="#skills" class="hover:underline">Skills</a>
-        <a href="#contacto" class="hover:underline">Contacto</a>
       </nav>
     </div>
   </header>
 
   <section id="presentacion" class="py-16 px-4">
     <div class="max-w-4xl mx-auto flex flex-col sm:flex-row items-center gap-6">
-      <img src="profile.jpg" alt="Foto de Jorge Daniel Gonzalez" class="w-40 h-40 rounded-full object-cover border-4 border-gray-300 dark:border-gray-700" />
+      <img src="img/profile.jpeg" alt="Foto de Jorge Daniel Gonzalez" class="w-40 h-40 rounded-full object-cover border-4 border-gray-300 dark:border-gray-700" />
       <div>
         <h2 class="text-4xl font-bold mb-2">Software Developer</h2>
         <ul class="text-sm space-y-1">
