--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
 <section id="educacion" class="px-4 py-10 max-w-4xl mx-auto">
   <h3 class="text-2xl font-bold mb-6 border-b pb-2">Educación</h3>
   <ul class="list-disc pl-5 text-sm space-y-4">
-    <li>
-      <strong>Ingeniería en Informática (en curso)</strong><br />
+      <li>
+      <strong>Ingeniería en Informática</strong><br />
       Universidad Nacional de La Matanza, Buenos Aires<br />
-      2014 – Actualidad | 16 materias aprobadas de 46
+      2014 – 2019<br />
+      (Formación universitaria avanzada en desarrollo de software y arquitectura de sistemas, cursada hasta tercer año)
     </li>
     <li>
       <strong>Técnico Electrónico</strong><br />
