--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="#experiencia" class="hover:underline">Experiencia</a>
         <a href="#educacion" class="hover:underline">Educación</a>
         <a href="#skills" class="hover:underline">Skills</a>
+        <a href="#skills" class="hover:underline">Skills</a>
+        <a href="Jorge-Gonzalez-CV.pdf" download class="inline-block px-4 py-2 bg-blue-600 text-white text-sm font-semibold rounded hover:bg-blue-700 transition">Descargar PDF</a>
       </nav>
     </div>
   </header>
