language button fixed

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <!-- Header para móvil -->
   <header class="sticky top-0 bg-white dark:bg-gray-900 z-50 shadow p-4 flex sm:hidden justify-between items-center">
     <h1 class="text-lg font-bold">Jorge Daniel Gonzalez</h1>
-    <button id="lang-switcher-mobile" class="px-3 py-1 bg-gray-200 dark:bg-gray-700 text-sm font-semibold rounded hover:bg-gray-300 dark:hover:bg-gray-600 transition">
+    <button onclick="document.getElementById('lang-switcher').click()" class="px-3 py-1 bg-gray-200 dark:bg-gray-700 text-sm font-semibold rounded hover:bg-gray-300 dark:hover:bg-gray-600 transition" data-lang-switch>
       ES
     </button>
   </header>
