refactor(skills): reorganize technical skills section for better readability

--- a/index.html
+++ b/index.html
@@ -220,40 +220,31 @@
 
   <section id="skills" class="px-4 py-6 sm:py-10 max-w-4xl mx-auto">
     <h3 class="text-xl sm:text-2xl font-bold mb-4 sm:mb-6 border-b pb-2" data-key="skills_title">Technical Skills</h3>
-    <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 text-sm sm:text-base">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 text-sm sm:text-base">
       <div>
-        <h4 class="font-semibold" data-key="skills_languages_title">Languages</h4>
-        <ul class="list-disc list-inside">
-          <li>Kotlin</li>
-          <li>Java</li>
-          <li>C</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="font-semibold" data-key="skills_tools_title">Tools</h4>
-        <ul class="list-disc list-inside">
-          <li>Git</li>
+        <h4 class="font-semibold mb-2" data-key="skills_tools_title">Tools & Libraries</h4>
+        <ul class="list-disc list-inside space-y-1">
+          <li>Android SDK</li>
           <li>Retrofit</li>
+          <li>Room</li>
           <li>Koin</li>
           <li>Firebase</li>
-          <li>Room</li>
-          <li>Glide</li>
-          <li>Picasso</li>
+          <li>Git</li>
         </ul>
       </div>
       <div>
-        <h4 class="font-semibold" data-key="skills_methodologies_title">Methodologies</h4>
-        <ul class="list-disc list-inside">
-          <li>Scrum</li>
+        <h4 class="font-semibold mb-2" data-key="skills_methodologies_title">Architecture & Patterns</h4>
+        <ul class="list-disc list-inside space-y-1">
           <li>Clean Architecture</li>
           <li>MVVM</li>
-          <li>CI/CD</li>
+          <li>Repository Pattern</li>
+          <li>Dependency Injection</li>
           <li>Unit Testing</li>
         </ul>
       </div>
       <div>
-        <h4 class="font-semibold" data-key="skills_soft_title">Soft Skills</h4>
-        <ul class="list-disc list-inside">
+        <h4 class="font-semibold mb-2" data-key="skills_soft_title">Soft Skills</h4>
+        <ul class="list-disc list-inside space-y-1">
           <li data-key="skills_soft_li1">Effective Communication</li>
           <li data-key="skills_soft_li2">Teamwork</li>
           <li data-key="skills_soft_li3">Proactivity</li>
@@ -261,12 +252,20 @@
         </ul>
       </div>
       <div>
-        <h4 class="font-semibold" data-key="skills_languages_section_title">Languages</h4>
-        <ul class="list-disc list-inside">
-          <li data-key="skills_lang_li1">Spanish: Native</li>
-          <li data-key="skills_lang_li2">English: Basic (in training)</li>
+        <h4 class="font-semibold mb-2" data-key="skills_languages_title">Languages</h4>
+        <ul class="list-disc list-inside space-y-1">
+          <li>Kotlin</li>
+          <li>Java</li>
+          <li>C</li>
         </ul>
       </div>
+    </div>
+    <div class="mt-8">
+      <h4 class="font-semibold mb-2" data-key="skills_languages_section_title">Languages</h4>
+      <ul class="list-disc list-inside space-y-1">
+        <li data-key="skills_lang_li1">Spanish: Native</li>
+        <li data-key="skills_lang_li2">English: Basic (in training)</li>
+      </ul>
     </div>
   </section>
 
