Update CV content and improve navigation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Jorge Daniel Gonzalez - CV</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    html {
+      scroll-behavior: smooth;
+      scroll-padding-top: 5rem;
+    }
     .loading {
       position: relative;
       pointer-events: none;
@@ -125,11 +129,11 @@
   <section id="resumen" class="px-4 py-6 sm:py-10 max-w-4xl mx-auto">
     <h3 class="text-xl sm:text-2xl font-bold mb-4 sm:mb-6 border-b pb-2" data-key="summary_title">Professional Summary</h3>
     <p class="text-sm sm:text-base leading-relaxed">
-      <span data-key="summary_p1">I am a software developer specializing in Android with over 9 years of professional experience in the technology sector. I currently work as a Software Technical Lead at Mercado Libre, leading strategic initiatives within the Mercado Pago ecosystem.</span>
+      <span data-key="summary_p1">I am a software developer specializing in Android with over 9 years of experience, currently working as a Software Technical Lead at Mercado Libre. I possess a comprehensive understanding of Android development lifecycles, frameworks, architecture components, mobile analytics, and agile methodologies.</span>
       <br /><br />
-      <span data-key="summary_p2">I have a strong focus on software architecture, especially Clean Architecture and MVVM, combining technical excellence with leadership skills to guide teams, define quality standards, and optimize development processes. I handle modern tools like Kotlin, coroutines, Retrofit, Koin, Git, CI/CD, and practice agile methodologies.</span>
+      <span data-key="summary_p2">I have a strong focus on software architecture, especially Clean Architecture and MVVM, combining technical excellence with leadership skills to guide teams and define quality standards. I am dedicated to implementing new technologies to produce scalable, maintainable, innovative, and robust applications within the Mercado Pago ecosystem.</span>
       <br /><br />
-      <span data-key="summary_p3">I am passionate about building scalable, efficient solutions with a real impact on the user experience. I am constantly looking for challenges that allow me to continue growing professionally and add value to high-impact projects.</span>
+      <span data-key="summary_p3">As an enthusiast of computer science, algorithms, and programming, I continuously expand my knowledge through research, technical literature, and staying current with industry trends. I am passionate about building efficient solutions with real impact on user experience, constantly seeking challenges that drive professional growth and add value to high-impact projects.</span>
     </p>
   </section>
 
